--- a/assets/css/ali.css
+++ b/assets/css/ali.css
@@ -1,17 +1,4 @@
 @charset "UTF-8";
-/*!
-=========================================================
-* JohnDoe Landing page
-=========================================================
-
-* Copyright: 2019 DevCRUD (https://devcrud.com)
-* Licensed: (https://devcrud.com/licenses)
-* Coded by www.devcrud.com
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
-*/
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,200i,300,300i,400,400i,600,600i,700,700i,900,900i&display=swap");
 :root {
   --blue: #79A9F5;
@@ -11190,6 +11177,21 @@ p {
   padding: 4px 10px;
   transition: 0.3s;
   -webkit-transition: 0.3s;
+}
+
+.portfolio .img-popup {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  z-index: 10;
+}
+
+.portfolio .text-holder {
+  margin-top: 20px;
 }
 
 .portfolio .filters a:first-child {
