--- a/assets/css/ali.css
+++ b/assets/css/ali.css
@@ -11508,8 +11508,8 @@ pre .code {
   position: relative;
   height: 80vh;
   min-height: 600px;
-  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../imgs/display.png);
-  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../imgs/display.png);
+  background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../imgs/Never.jpg);
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url(../imgs/Never.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
